--- a/config/docker-compose-sequencer.yml
+++ b/config/docker-compose-sequencer.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   sequencer:
     container_name: {{.ChainName}}-sequencer
-    image: lagrangelabs/lagrange-node:deploy
+    image: lagrangelabs/lagrange-node:develop
     command:
       - "/bin/sh"
       - "-c"
@@ -21,7 +21,7 @@ services:
       - LAGRANGE_NODE_GOVERNANCE_EVIDENCEUPLOADINTERVAL={{.EvidenceUploadInterval}}
   server:
     container_name: {{.ChainName}}-server
-    image: lagrangelabs/lagrange-node:deploy
+    image: lagrangelabs/lagrange-node:develop
     ports:
       - 9090:9090
     command:
